InsertResult/GetObservation encoding
git-svn-id: https://svn.52north.org/svn/swe/main/SOS/Service/branches/52n-sos-400-refactored@13886 9b2695e2-e135-4693-8c03-170fd80ef316